# chi_llm

./: .chi_llm.json  .gitignore  .lengthcheckignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  SDK_USAGE.md  TESTING.md  chi.tmp.json  chi_llm_diagnostics.json  coverage.xml  install.bat  install.ps1  install.sh  leftovers.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_example.py  tmp_commit_msg.txt
.github/workflows/: tests.yml
chi_llm/: __init__.py  analyzer.py  cli.py  cli_main.py  config.py  core.py  model_utils.py  models.py  models.yaml  prompts.py  rag.py  setup.py  utils.py
chi_llm/cli_modules/: __init__.py  basic.py  bootstrap.py  data.py  diagnostics.py  interactive.py  models.py  providers.py  providers_discovery.py  providers_schema.py  providers_test.py  providers_url.py  rag.py  templates.py  ui.py
chi_llm/providers/: __init__.py  anthropic.py  base.py  claude_cli.py  discovery.py  lmstudio.py  ollama.py  openai.py  openai_cli.py  router.py
chi_llm/tui/: __init__.py  app.py  store.py
chi_llm/ui_frontend/: package-lock.json  package.json
docs/: CLI.md  architecture-principles.md  configuration.md  product-ideas.md
docs/changelog/: 2025-08-21-002-provider-config.md  (+52 more)
examples/: .chi_llm.json.example  basic_usage.py  chatbot.py  code_assistant.py  config_hierarchy_demo.py  data_extraction.py  integration_example.py  provider_lmstudio.py  provider_ollama.py  provider_openai.py  provider_router.py  rag_config.yaml  rag_example.py  rag_with_config.py
go-chi/: README.md  chi.tmp.json  go.mod  go.sum
scripts/: capture_tui.py  check_file_lengths.py  smoke_tui.py  validate_commit_msg.py
tests/: __init__.py  conftest.py  test_bootstrap.py  test_cli_providers_list.py  test_cli_providers_schema.py  test_cli_providers_test.py  test_compatibility.py  test_config_api.py  test_config_cli.py  test_core.py  test_diagnostics_cli.py  test_models_cli.py  test_prompts.py  test_provider_anthropic.py  test_provider_cli.py  test_provider_discovery.py  test_provider_lmstudio.py  test_provider_ollama.py  test_provider_openai.py  test_provider_router.py  test_providers_cli.py  test_providers_discover_models_cli.py  test_providers_find_url.py  test_providers_set_auto_url.py  test_tui_models_controller.py  test_tui_providers_controller.py  test_tui_store.py  test_tui_store_diagnostics.py  test_tui_store_models.py  test_tui_store_models_remove.py  test_tui_store_provider_models.py  test_tui_store_providers.py  test_ui_cli.py  test_ui_cli_path_detection.py  test_utils.py
tui/chi-tui/: Cargo.toml  README.md
tui/chi-tui/src/: app.rs  build.rs  diagnostics.rs  main.rs  models.rs  providers.rs  readme.rs  settings.rs  theme.rs  util.rs
tui/chi-tui/src/providers/: mod.rs  select_default.rs  state.rs  view.rs
(+145 files in other folders)
