[package]
name = "chi-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for chi-llm (Rust/ratatui skeleton)"
license = "MIT"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive" ] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
